fix label clipping

--- a/examples/with-nextjs-and-clerk-auth/src/app/globals.css
+++ b/examples/with-nextjs-and-clerk-auth/src/app/globals.css
@@ -127,6 +127,8 @@ html {
       left: 20px;
       top: 10px;
       font-size: 14px;
+      max-width: calc(100% - 52px);
+      text-overflow: ellipsis;
 
       &.MuiFormLabel-filled {
         opacity: 0;
